# vicious-vs-double-slice

./: README.md  pyproject.toml
tests/pf2e/: test_calculations.py  test_degrees.py  test_dice.py
vicious_vs_double_slice/: Playground.py  app.py  parameters.py  plots.py
vicious_vs_double_slice/pages/: 1_🪓_Torgeir.py
vicious_vs_double_slice/pf2e/: calculations.py  degrees.py  dice.py
