[tool.poetry]
name = "vicious-vs-double-slice"
version = "0.1.0"
description = "A totally overkill way of comparing double slice and vicious swing for a sword and board fighter"
authors = ["Matheus Eichelberger <matheus.eichelberger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.40.2"
pytest = "^8.3.3"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
